--- a/package.json
+++ b/package.json
@@ -3,17 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
+    "@mui/x-charts": "^8.9.2",
+    "@mui/x-data-grid": "^8.9.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^16.18.126",
+    "@types/plotly.js": "^3.0.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-image-crop": "^8.1.6",
+    "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.10.0",
+    "leaflet": "^1.9.4",
+    "plotly.js": "^3.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
+    "react-image-crop": "^11.0.10",
+    "react-leaflet": "^5.0.0",
+    "react-plotly.js": "^2.6.0",
+    "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
+    "recharts": "^3.1.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
