--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,13 @@
   "outputDirectory": "build",
   "devCommand": "npm start",
   "env": {
-    "REACT_APP_API_BASE_URL": "@react_app_api_base_url"
+    "REACT_APP_API_BASE_URL": "@react_app_api_base_url",
+    "DATABASE_URL": "@database_url"
   },
   "build": {
     "env": {
-      "REACT_APP_API_BASE_URL": "@react_app_api_base_url"
+      "REACT_APP_API_BASE_URL": "@react_app_api_base_url",
+      "DATABASE_URL": "@database_url"
     }
   },
   "headers": [
