--- a/vercel.json
+++ b/vercel.json
@@ -4,12 +4,14 @@
   "devCommand": "npm start",
   "env": {
     "REACT_APP_API_BASE_URL": "@react_app_api_base_url",
-    "DATABASE_URL": "@database_url"
+    "DATABASE_URL": "@database_url",
+    "VERCEL_FORCE_NO_BUILD_CACHE": "1"
   },
   "build": {
     "env": {
       "REACT_APP_API_BASE_URL": "@react_app_api_base_url",
-      "DATABASE_URL": "@database_url"
+      "DATABASE_URL": "@database_url",
+      "VERCEL_FORCE_NO_BUILD_CACHE": "1"
     }
   },
   "headers": [
@@ -27,6 +29,18 @@
         {
           "key": "X-XSS-Protection",
           "value": "1; mode=block"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        },
+        {
+          "key": "Pragma",
+          "value": "no-cache"
+        },
+        {
+          "key": "Expires",
+          "value": "0"
         }
       ]
     }
