--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,3 +24,11 @@
     "src"
   ]
 }
+
+{
+  "compilerOptions": {
+    "strict": false,
+    "noImplicitAny": false,
+    "skipLibCheck": true
+  }
+}
